--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Testing jQueryLite</title>
-    <script src="jquery_lite.js"></script>
+    <script src="./jquery_lite.js"></script>
   </head>
   <body>
     <h1>Title!</h1>
-    
+
     <div class="test-div">
       Don't use divs! -Jonathan
     </div>
