--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <h1>Title!</h1>
 
-    <div class="test-div">
-      Don't use divs! -Jonathan
-    </div>
+    <div class="test-div">Don't use divs! -Jonathan</div>
 
     <div class="ul-div">
       <ul>
